<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/Star"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:contentDescription="@string/Star"
            android:src="@android:drawable/btn_star_big_on" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RestauranteColombiaU"
            tools:text="Restaurante: Colombia U" />

        <ImageView
            android:id="@+id/BlackLine"
            android:layout_width="match_parent"
            android:layout_height="11dp"
            android:contentDescription="@string/BlackLine"
            android:src="@android:color/black" />

        <Button
            android:id="@+id/VerSede"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="VerSede"
            android:text="@string/VerSede"
            tools:text="Ver Sede" />

        <Button
            android:id="@+id/ReservarMesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ReservarMesa"
            android:text="@string/ReservarMesa"
            tools:text="Reservar Mesa" />

        <Button
            android:id="@+id/ConsultarMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ConsultarMenu"
            android:text="@string/ConsultarMenu"
            tools:text="Consultar Menu" />

        <Button
            android:id="@+id/CalificarServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="CalificarServicio"
            android:text="@string/CalificarServicio"
            tools:text="Calificar Servicio" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>